--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>OASIS 2017 | Intro</title>
 		<link rel="stylesheet" href="assets/css/skeleton.css">
+		<link rel="stylesheet" href="assets/css/scroll.css">
 	</head>
 	<body>
 		<!--   nav bar -->
@@ -45,6 +46,7 @@
 			<section class="info">
 			</section>
 		</section>
-		
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/scroll.js"></script>
 	</body>
 </html>
