--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
 <head>
 	<title>OASIS 2k17</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </head>
 <body>
+	<div class="icon">
+		<img src="img/ham.png" id="nav">
+	</div>
 	<div class="container">
 	<div class="shapes hex1">
-			<img src="Exports/hexagon1.png" id="h1">
+			<img src="Exports/octa4.png" id="h1">
 		</div>
 		<div class="shapes oct3">
 			<img src="Exports/octa3.png" id="o3">
 		</div>
 		<div class="shapes hex2">
-			<img src="Exports/hexagon2.png" id="h2">
+			<img src="Exports/octa4.png" id="h2">
 		</div>
 		<div class="shapes oct1">
 			<img src="Exports/octa1.png" id="o1">
 		</div>	
 		<div class="shapes oct2">
 			<img src="Exports/octa2.png" id="o2">
+		</div>
+		<div class="shapes oct5">
+			<img src="Exports/octa3.png" id="o3">
 		</div>
 		<div class="text_container">
 		<h2>CONTACT US</h2>
