--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
 		<link rel="stylesheet" href="assets/css/skeleton.css">
 		<link rel="stylesheet" href="assets/css/reset.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
+		<link rel="stylesheet" href="assets/css/animate.css" type="text/css">
 	</head>
 	<body>
 		<!--   nav bar -->
 		<section class="left-tab">
 			<div class="oasisimg">
-				<img src="assets/imgs/OASIS 17.png" alt="Oasis 2017">
+				<img class="animated bounce" src="assets/imgs/OASIS 17.png" alt="Oasis 2017">
 			</div>
 			<div class="navbar nav1">
-				<div class="col">HOME </div>
-				<div class="col">ABOUT </div>
-				<div class="col">EVENTS </div>
+				<div class="col c1 animated flipInX">HOME </div>
+				<div class="col c2 animated flipInX">ABOUT </div>
+				<div class="col c3 animated flipInX">EVENTS </div>
 			</div>
-			<div class="mirage"> Mirage'17 </div>
+			<div class="mirage animated bounceInLeft"> Mirage'17 </div>
 			<div class="navbar nav2">
-				<div class="col">SPONSOR </div>
-				<div class="col">REGISTER</div>
-				<div class="col">CONTACT </div>
+				<div class="col c4 animated flipInX">SPONSOR </div>
+				<div class="col c5 animated flipInX">REGISTER</div>
+				<div class="col c6 animated flipInX">CONTACT </div>
 			</div>
 
-			<div class="social">
+			<div class="social animated fadeInDown">
 				<img class="media" src="assets/imgs/facebook.png" alt="Facebook">
 				<img class="media" src="assets/imgs/twitter.png" alt="Twitter">
 				<img class="media" src="assets/imgs/youtube.png" alt="Youtube">
