--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="icon">
-		<img src="img/ham.png" id="nav">
+		<a href=""><img src="img/ham.png" id="nav"></a>
 	</div>
 	<div class="container">
 	<div class="shapes hex1">
@@ -28,8 +28,11 @@
 			<img src="Exports/octa2.png" id="o2">
 		</div>
 		<div class="shapes oct5">
-			<img src="Exports/octa3.png" id="o3">
+			<img src="Exports/octa1.png" id="o6">
 		</div>
+		<div class="shapes oct6">
+			<img src="Exports/octa3.png" id="o3">
+		</div>	
 		<div class="text_container">
 		<h2>CONTACT US</h2>
 		<p>Alkgh,jhv AS>bkj ASjfb.k.jefcbz.kjvbsd zfvjh nznvchs mdgc vgcvh gcmzsdv cmshgdcvms d h c vmgshd cvmSncv mhzvdcszdhvc mshd cvmzsdhvc mshdvcmsd     masgfdc  kawck kyudgf fugyfe  fgszefa avae faerv eersver vfv ervad dvghzd fvse rvad vsfdva sdfaf afvdf dfgdg earggadfs gfqaerg wethwt vfqe rgwfgv ewrg we g weffv</p>
