--- a/index.html
+++ b/index.html
@@ -3,42 +3,42 @@
 <html>
 <head>
 	<title>OASIS 2k17</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="Assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </head>
 <body>
 	<div class="icon">
-		<a href=""><img src="img/ham.png" id="nav"></a>
+		<a href=""><img src="Assets/img/ham.png" id="nav"></a>
 	</div>
 	<div class="container">
 	<div class="shapes hex1">
-			<img src="Exports/octa4.png" id="h1">
+			<img src="Assets/Exports/octa4.png" id="h1">
 		</div>
 		<div class="shapes oct3">
-			<img src="Exports/octa3.png" id="o3">
+			<img src="Assets/Exports/octa3.png" id="o3">
 		</div>
 		<div class="shapes hex2">
-			<img src="Exports/octa4.png" id="h2">
+			<img src="Assets/Exports/octa4.png" id="h2">
 		</div>
 		<div class="shapes oct1">
-			<img src="Exports/octa1.png" id="o1">
+			<img src="Assets/Exports/octa1.png" id="o1">
 		</div>	
 		<div class="shapes oct2">
-			<img src="Exports/octa2.png" id="o2">
+			<img src="Assets/Exports/octa2.png" id="o2">
 		</div>
 		<div class="shapes oct5">
-			<img src="Exports/octa1.png" id="o6">
+			<img src="Assets/Exports/octa1.png" id="o6">
 		</div>
 		<div class="shapes oct6">
-			<img src="Exports/octa3.png" id="o3">
+			<img src="Assets/Exports/octa3.png" id="o3">
 		</div>	
 		<div class="text_container">
 		<h2>CONTACT US</h2>
 		<p>Alkgh,jhv AS>bkj ASjfb.k.jefcbz.kjvbsd zfvjh nznvchs mdgc vgcvh gcmzsdv cmshgdcvms d h c vmgshd cvmSncv mhzvdcszdhvc mshd cvmzsdhvc mshdvcmsd     masgfdc  kawck kyudgf fugyfe  fgszefa avae faerv eersver vfv ervad dvghzd fvse rvad vsfdva sdfaf afvdf dfgdg earggadfs gfqaerg wethwt vfqe rgwfgv ewrg we g weffv</p>
 	</div>
 	<div class="img_container">
-		<img src="Exports/tardis.png" id="icon">
+		<img src="Assets/Exports/tardis.png" id="icon">
 	</div>
 		
 	
