--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<!--   nav bar -->
+		<div class="wrapper">
 		<section class="left-tab">
 			<div>
 				<!-- oasis logo -->
@@ -169,6 +170,7 @@
 			<section class="info">
 			</section>
 		</section>
+		</div>
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/scroll.js"></script>
 		<script src="assets/js/transition.js"></script>
