--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="slider-container">
 				<div class="slider">
 					<a class="bar">
-						<div class="button"></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">01</div><p>Random Text</p></div>
 					</a>
 					<div class="popup" id="1"> 
 						<img src="assets/img/cross.svg" id="cross" />
@@ -39,7 +39,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">02</div><p>Random Text</p></div>
 					</a>
 					<div class="popup" id="2"> 
 						<img src="assets/img/cross.svg" id="cross" />
@@ -52,7 +52,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">03</div><p>Random Text</p></div>
 					</a>
 					<div class="popup" id="3"> 
 						<img src="assets/img/cross.svg" id="cross" />
@@ -65,7 +65,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">04</div><p>Random Text</p></div>
 					</a>
 					<div class="popup" id="4"> 
 						<img src="assets/img/cross.svg" id="cross" />
@@ -78,7 +78,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">05</div><p>Random Text</p></div>
 					</a>
 					<div class="popup" id="5"> 
 						<img src="assets/img/cross.svg" id="cross" />
@@ -91,7 +91,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">06</div><p>Random Text</p></div>
 					</a>
 					<div class="popup" id="6"> 
 						<img src="assets/img/cross.svg" id="cross" />
