as per madhur's design

--- a/index.html
+++ b/index.html
@@ -3,32 +3,43 @@
 	<head>
 		<title>OASIS 2017 | Intro</title>
 		<link rel="stylesheet" href="assets/css/skeleton.css">
-		<link rel="stylesheet" href="assets/css/reset.css">
-		<link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
-		<link rel="stylesheet" href="assets/css/animate.css" type="text/css">
+		<link rel="stylesheet" href="assets/css/animate.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
 		<!--   nav bar -->
 		<section class="left-tab">
-			<div class="oasisimg">
-				<img class="animated bounce" src="assets/imgs/OASIS 17.png" alt="Oasis 2017">
+			<div class="navhead">
+				<!-- oasis logo -->
+				<div class="monogram"> 
+				<img src="" alt="oasis monogram">
+				</div>
+				<div class="oasishead animated fadeInDown"> OASIS </div>
+				<div class="realm animated fadeInDown"> 
+					<div class="col1">REALMS </div>
+					<div class="col1 dot"> 
+						<div class="circ cir1"> </div>
+						<div> OF </div>
+						<div class="circ cir2"> </div>
+					</div>
+					<div class="col1"> FICTION </div>
+				</div>
 			</div>
-			<div class="navbar nav1">
-				<div class="col c1 animated flipInX">HOME </div>
-				<div class="col c2 animated flipInX">ABOUT </div>
-				<div class="col c3 animated flipInX">EVENTS </div>
+			<div class="navbar">
+				<!-- nav bar -->
+				<div class="col2 animated flipInX"> ABOUT US</div>
+				<div class="col2 animated flipInX"> SPONSORS</div>
+				<div class="col2 animated flipInX"> CONTACT US</div>
 			</div>
-			<div class="mirage animated bounceInLeft"> Mirage'17 </div>
-			<div class="navbar nav2">
-				<div class="col c4 animated flipInX">SPONSOR </div>
-				<div class="col c5 animated flipInX">REGISTER</div>
-				<div class="col c6 animated flipInX">CONTACT </div>
-			</div>
-
-			<div class="social animated fadeInDown">
-				<img class="media" src="assets/imgs/facebook.png" alt="Facebook">
-				<img class="media" src="assets/imgs/twitter.png" alt="Twitter">
-				<img class="media" src="assets/imgs/youtube.png" alt="Youtube">
+			<div class="foot">
+				<div class="oasislogo">
+					<img src="assets/imgs/OASIS 17.png" alt="OASIS 17">
+				</div>
+				<div class="social animated fadeInDown">
+					<a href=""> <div class="fa fa-facebook"></div></a>
+					<a href=""> <div class="fa fa-twitter"></div></a>
+					<a href=""> <div class="fa fa-youtube"></div></a>
+				</div>
 			</div>
 		</section>
 
