--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>OASIS 2017 | Intro</title>
+		<link rel="stylesheet" href="assets/css/fonts.css">
 		<link rel="stylesheet" href="assets/css/skeleton.css">
 		<link rel="stylesheet" href="assets/css/scroll.css">
 		<link rel="stylesheet" href="assets/css/popup.css">
@@ -26,9 +27,9 @@
 			<div class="slider-container">
 				<div class="slider">
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">01</div><p>Random Text</p></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">01</div><div class="seperator"></div><p>Random Text</p></div>
 					</a>
-					<div class="popup" id="1"> 
+					<div class="popup" id="1">
 						<img src="assets/img/cross.svg" id="cross" />
 						<img src="#" />
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -39,9 +40,9 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">02</div><p>Random Text</p></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">02</div><div class="seperator"></div><p>Random Text</p></div>
 					</a>
-					<div class="popup" id="2"> 
+					<div class="popup" id="2">
 						<img src="assets/img/cross.svg" id="cross" />
 						<img src="#" />
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -52,9 +53,9 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">03</div><p>Random Text</p></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">03</div><div class="seperator"></div><p>Random Text</p></div>
 					</a>
-					<div class="popup" id="3"> 
+					<div class="popup" id="3">
 						<img src="assets/img/cross.svg" id="cross" />
 						<img src="#" />
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -65,9 +66,9 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">04</div><p>Random Text</p></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">04</div><div class="seperator"></div><p>Random Text</p></div>
 					</a>
-					<div class="popup" id="4"> 
+					<div class="popup" id="4">
 						<img src="assets/img/cross.svg" id="cross" />
 						<img src="#" />
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -78,9 +79,9 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">05</div><p>Random Text</p></div>
+						<div class="button"><div class="overlay"></div><div class="uppertext">05</div><div class="seperator"></div><p>Random Text</p></div>
 					</a>
-					<div class="popup" id="5"> 
+					<div class="popup" id="5">
 						<img src="assets/img/cross.svg" id="cross" />
 						<img src="#" />
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -90,22 +91,8 @@
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
-					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">06</div><p>Random Text</p></div>
-					</a>
-					<div class="popup" id="6"> 
-						<img src="assets/img/cross.svg" id="cross" />
-						<img src="#" />
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					</div>
-				</div>
 			</div>
-			
+
 			</div><!-- <div class="popup-container">
 				<div class="popup">
 					<img src="assets/img/cross.svg" id="cross" />
