--- a/index.html
+++ b/index.html
@@ -12,13 +12,23 @@
 		<div class="wrapper">
 		<section class="left-tab">
 			<div>
-				<!-- oasis logo -->
+				<img src="assets/img/monogram.png" width="125">
+				<h1><b>OASIS</b></h1>
+				<div id="realms">
+					<span>&#x30fb;</span>
+					<span><label>REALMS</label><label>OF</label><label>FICTION</label></span>
+					<span>&#x30fb;</span>
+				</div>
 			</div>
 			<div>
-				<!-- nav bar -->
+				<nav>
+					<a>ABOUT US</a>
+					<a>SPONSORS</a>
+					<a>CONTACT US</a>
+				</nav>
 			</div>
 			<div>
-				<!-- social meadia -->
+				<span><a>&#x271a;</a><a>&#x271a;</a><a>&#x271a;</a></span>
 			</div>
 		</section>
 
@@ -27,7 +37,10 @@
 			<div class="slider-container">
 				<div class="slider">
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">01</div><div class="seperator"></div><p>Random Text</p></div>
+						<div class="button">
+							<div class="overlay"><div class="uppertext">01</div><div class="seperator"></div><p>Random Text</p></div>
+							<div class="uppertext">01</div><div class="seperator"></div><p>Random Text</p>
+						</div>
 					</a>
 					<div class="popup" id="1">
 						<img src="assets/img/cross.svg" id="cross" />
@@ -40,7 +53,10 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">02</div><div class="seperator"></div><p>Random Text</p></div>
+						<div class="button">
+							<div class="overlay"><div class="uppertext">02</div><div class="seperator"></div><p>Random Text</p></div>
+							<div class="uppertext">02</div><div class="seperator"></div><p>Random Text</p>
+						</div>
 					</a>
 					<div class="popup" id="2">
 						<img src="assets/img/cross.svg" id="cross" />
@@ -53,7 +69,10 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">03</div><div class="seperator"></div><p>Random Text</p></div>
+						<div class="button">
+							<div class="overlay"><div class="uppertext">03</div><div class="seperator"></div><p>Random Text</p></div>
+							<div class="uppertext">03</div><div class="seperator"></div><p>Random Text</p>
+						</div>
 					</a>
 					<div class="popup" id="3">
 						<img src="assets/img/cross.svg" id="cross" />
@@ -66,7 +85,10 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">04</div><div class="seperator"></div><p>Random Text</p></div>
+						<div class="button">
+  						<div class="overlay"><div class="uppertext">04</div><div class="seperator"></div><p>Random Text</p></div>
+						  <div class="uppertext">04</div><div class="seperator"></div><p>Random Text</p>
+						</div>
 					</a>
 					<div class="popup" id="4">
 						<img src="assets/img/cross.svg" id="cross" />
@@ -79,7 +101,10 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button"><div class="overlay"></div><div class="uppertext">05</div><div class="seperator"></div><p>Random Text</p></div>
+						<div class="button">
+  						<div class="overlay"><div class="uppertext">05</div><div class="seperator"></div><p>Random Text</p></div>
+						  <div class="uppertext">05</div><div class="seperator"></div><p>Random Text</p>
+						</div>
 					</a>
 					<div class="popup" id="5">
 						<img src="assets/img/cross.svg" id="cross" />
