Animations - Home and NavBar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>OASIS 2017 | Intro</title>
 		<link rel="stylesheet" href="assets/css/fonts.css">
+		<link rel="stylesheet" href="assets/css/animate.css">
 		<link rel="stylesheet" href="assets/css/skeleton.css">
 		<link rel="stylesheet" href="assets/css/scroll.css">
 		<link rel="stylesheet" href="assets/css/popup.css">
@@ -12,9 +13,9 @@
 		<div class="wrapper">
 		<section class="left-tab">
 			<div>
-				<img src="assets/img/monogram.png" width="125">
-				<h1><b>OASIS</b></h1>
-				<div id="realms">
+				<img class="animated fadeInDown" src="assets/img/monogram.png" width="125">
+				<h1 class="animated fadeInDown"><b>OASIS</b></h1>
+				<div id="realms" class="animated fadeInUp">
 					<span>&#x30fb;</span>
 					<span><label>REALMS</label><label>OF</label><label>FICTION</label></span>
 					<span>&#x30fb;</span>
@@ -22,13 +23,17 @@
 			</div>
 			<div>
 				<nav>
-					<a>ABOUT US</a>
-					<a>SPONSORS</a>
-					<a>CONTACT US</a>
+					<a class="animated flipInY">ABOUT US</a>
+					<a class="animated flipInY">SPONSORS</a>
+					<a class="animated flipInY">CONTACT US</a>
 				</nav>
 			</div>
 			<div>
-				<span><a>&#x271a;</a><a>&#x271a;</a><a>&#x271a;</a></span>
+				<span class="animated fadeInDown">
+					<a id="facebook">&#x271a;</a>
+					<a id="twitter">&#x271a;</a>
+					<a id="youtube">&#x271a;</a>
+				</span>
 			</div>
 		</section>
 
@@ -37,7 +42,7 @@
 			<div class="slider-container">
 				<div class="slider">
 					<a class="bar">
-						<div class="button">
+						<div class="button animated fadeInUp">
 							<div class="overlay"><div class="uppertext">01</div><div class="seperator"></div><p>Random Text</p></div>
 							<div class="uppertext">01</div><div class="seperator"></div><p>Random Text</p>
 						</div>
@@ -53,7 +58,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button">
+						<div class="button animated fadeInUp">
 							<div class="overlay"><div class="uppertext">02</div><div class="seperator"></div><p>Random Text</p></div>
 							<div class="uppertext">02</div><div class="seperator"></div><p>Random Text</p>
 						</div>
@@ -69,7 +74,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button">
+						<div class="button animated fadeInUp">
 							<div class="overlay"><div class="uppertext">03</div><div class="seperator"></div><p>Random Text</p></div>
 							<div class="uppertext">03</div><div class="seperator"></div><p>Random Text</p>
 						</div>
@@ -85,7 +90,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button">
+						<div class="button animated fadeInUp">
   						<div class="overlay"><div class="uppertext">04</div><div class="seperator"></div><p>Random Text</p></div>
 						  <div class="uppertext">04</div><div class="seperator"></div><p>Random Text</p>
 						</div>
@@ -101,7 +106,7 @@
 						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<a class="bar">
-						<div class="button">
+						<div class="button animated fadeInUp">
   						<div class="overlay"><div class="uppertext">05</div><div class="seperator"></div><p>Random Text</p></div>
 						  <div class="uppertext">05</div><div class="seperator"></div><p>Random Text</p>
 						</div>
