adding popup content

--- a/index.html
+++ b/index.html
@@ -49,13 +49,7 @@
 					</a>
 					<div class="popup" id="1">
 						<img src="assets/img/cross.svg" id="cross" />
-						<img src="#" />
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<div class ="video-container"></div>
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
@@ -65,13 +59,7 @@
 					</a>
 					<div class="popup" id="2">
 						<img src="assets/img/cross.svg" id="cross" />
-						<img src="#" />
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<div class ="video-container"></div>
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
@@ -81,13 +69,7 @@
 					</a>
 					<div class="popup" id="3">
 						<img src="assets/img/cross.svg" id="cross" />
-						<img src="#" />
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<div class ="video-container"></div>
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
@@ -97,13 +79,7 @@
 					</a>
 					<div class="popup" id="4">
 						<img src="assets/img/cross.svg" id="cross" />
-						<img src="#" />
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<div class ="video-container"></div>
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
@@ -113,13 +89,8 @@
 					</a>
 					<div class="popup" id="5">
 						<img src="assets/img/cross.svg" id="cross" />
-						<img src="#" />
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<div class ="video-container"></div>
+						
 					</div>
 			</div>
 
