--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 			</div>
 			<div>
 				<span class="animated fadeInDown">
-					<a id="facebook">&#x271a;</a>
-					<a id="twitter">&#x271a;</a>
-					<a id="youtube">&#x271a;</a>
+					<a class="social" id="facebook">&#x271a;</a>
+					<a class="social" id="twitter">&#x271a;</a>
+					<a class="social" id="youtube">&#x271a;</a>
 				</span>
 			</div>
 		</section>
