--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 				<div class="slider">
 					<a class="bar">
 						<div class="button animated fadeInUp">
-							<div class="overlay"><div class="uppertext">01</div><div class="seperator"></div><p>Random Text</p></div>
-							<div class="uppertext">01</div><div class="seperator"></div><p>Random Text</p>
+							<div class="overlay"><div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p></div>
+							<div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p>
 						</div>
 					</a>
 					<div class="popup" id="1">
@@ -53,8 +53,8 @@
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
-							<div class="overlay"><div class="uppertext">02</div><div class="seperator"></div><p>Random Text</p></div>
-							<div class="uppertext">02</div><div class="seperator"></div><p>Random Text</p>
+							<div class="overlay"><div class="uppertext">OASIS'16</div><div class="seperator"></div><p>AFTERMOVIE</p></div>
+							<div class="uppertext">OASIS'16</div><div class="seperator"></div><p>AFTERMOVIE</p>
 						</div>
 					</a>
 					<div class="popup" id="2">
@@ -63,8 +63,8 @@
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
-							<div class="overlay"><div class="uppertext">03</div><div class="seperator"></div><p>Random Text</p></div>
-							<div class="uppertext">03</div><div class="seperator"></div><p>Random Text</p>
+							<div class="overlay"><div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p></div>
+							<div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p>
 						</div>
 					</a>
 					<div class="popup" id="3">
@@ -73,8 +73,8 @@
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
-  						<div class="overlay"><div class="uppertext">04</div><div class="seperator"></div><p>Random Text</p></div>
-						  <div class="uppertext">04</div><div class="seperator"></div><p>Random Text</p>
+							<div class="overlay"><div class="uppertext">OASIS'16</div><div class="seperator"></div><p>AFTERMOVIE</p></div>
+							<div class="uppertext">OASIS'16</div><div class="seperator"></div><p>AFTERMOVIE</p>
 						</div>
 					</a>
 					<div class="popup" id="4">
@@ -83,14 +83,14 @@
 					</div>
 					<a class="bar">
 						<div class="button animated fadeInUp">
-  						<div class="overlay"><div class="uppertext">05</div><div class="seperator"></div><p>Random Text</p></div>
-						  <div class="uppertext">05</div><div class="seperator"></div><p>Random Text</p>
+							<div class="overlay"><div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p></div>
+							<div class="uppertext">OASIS'17</div><div class="seperator"></div><p>TRAILER</p>
 						</div>
 					</a>
 					<div class="popup" id="5">
 						<img src="assets/img/cross.svg" id="cross" />
 						<div class ="video-container"></div>
-						
+
 					</div>
 			</div>
 
