--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 			</div>
 			<div>
 				<nav>
+					<div id="pointers">
+						<div id="pointerLeft" class="pl1">&#x30fb;</div>
+						<div id="pointerRight" class="pr1">&#x30fb;</div>
+					</div>
 					<a class="animated flipInY">ABOUT US</a>
 					<a class="animated flipInY">SPONSORS</a>
 					<a class="animated flipInY">CONTACT US</a>
@@ -162,5 +166,6 @@
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/scroll.js"></script>
 		<script src="assets/js/transition.js"></script>
+		<script src="assets/js/pointer.js"></script>
 	</body>
 </html>
