Fixed Pointer Positioning

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="assets/css/skeleton.css">
 		<link rel="stylesheet" href="assets/css/scroll.css">
 		<link rel="stylesheet" href="assets/css/popup.css">
+		<style id="keep_at_end"></style>
 	</head>
 	<body>
 		<!--   nav bar -->
