change perspective and timing

--- a/new.html
+++ b/new.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Contact Us | Oasis 2017</title>
     <link rel="stylesheet" href="Assets/css/new.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+    <script src="Assets/js/TweenMax.min.js"></script>
   </head>
   <body>
     <div id="main">
