integrating info.html and new.html into info.html

--- a/info.html
+++ b/info.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<div id="container">
-		<div id="moving">
+		<div id="movable">
 		<div class="shapes">
-			<img src="Assets/Exports/octa3.png" class="o31 shape">
+<!-- 			<img src="Assets/Exports/octa3.png" class="o31 shape">
 		
 			<img src="Assets/Exports/octa3.png" class="o32 shape">
 		
@@ -19,9 +19,22 @@
 		
 			<img src="Assets/Exports/octa2.png" class="o21 shape">
 
-			<img src="Assets/Exports/octa1.png" class="o12 shape">
+			<img src="Assets/Exports/octa1.png" class="o12 shape"> -->
 
+			<!-- <img src="Assets/Exports/octa3.png" class="o33 shape">
 			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+ -->			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
 		</div>	
 		<div class="main">
 			<div class="image-main"></div>
@@ -33,6 +46,6 @@
 		</div>
 	</div>
 
-	<script src="rotate.js"></script>
+	<script src="Assets/js/move.js"></script>
 </body>
 </html>
