added tweenmax files

--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Contact us</title>
 	<link rel="stylesheet" type="text/css" href="info.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+	<script src="Assets/js/TweenMax.min.js"></script>
 </head>
 <body>
 	<div id="container">
