--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 						<div id="pointerLeft" class="pl1">&#x30fb;</div>
 						<div id="pointerRight" class="pr1">&#x30fb;</div>
 					</div>
-					<a class="animated flipInY">ABOUT US</a>
-					<a class="animated flipInY">SPONSORS</a>
-					<a class="animated flipInY">CONTACT US</a>
+					<a class="animated flipInY" data="about">ABOUT US</a>
+					<a class="animated flipInY" data="sponsors">SPONSORS</a>
+					<a class="animated flipInY" data="contact">CONTACT US</a>
 				</nav>
 			</div>
 			<div>
@@ -161,6 +161,45 @@
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div> -->
 			<section class="info">
+			<div id="info-container" data="contact">
+		<div id="movable">
+		<div class="shapes">
+<!-- 			<img src="Assets/Exports/octa3.png" class="o31 shape">
+		
+			<img src="Assets/Exports/octa3.png" class="o32 shape">
+		
+			<img src="Assets/Exports/octa4.png" class="o41 shape">
+		
+			<img src="Assets/Exports/octa1.png" class="o11 shape">
+		
+			<img src="Assets/Exports/octa2.png" class="o21 shape">
+
+			<img src="Assets/Exports/octa1.png" class="o12 shape"> -->
+
+			<!-- <img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+			<img src="Assets/Exports/octa3.png" class="o33 shape">
+ -->			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+			<div class="o33 shape"></div>
+		</div>	
+		<div class="main">
+			<div class="image-main"></div>
+			<div class="content">
+				<h2>CONTACT US</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+			</div>
+		</div>
+		</div>
+	</div>
 			</section>
 		</section>
 		</div>
@@ -168,6 +207,8 @@
 		<script src="assets/js/scroll.js"></script>
 		<script src="assets/js/transition.js"></script>
 		<script src="assets/js/pointer.js"></script>
+		<script src="assets/js/navbar.js"></script>
+
 	</body>
 </html>
 
