--- a/register.htm
+++ b/register.htm
@@ -18,6 +18,7 @@
              		 <div class="input-field">
                			 <label>Name</label>
                			 <input name="name" type="text" placeholder="Name" required="" />
+                     <div class="sub-info">(As to be printed on reward/certificate)</div>
              		 </div>
              		 <div class="input-field">
                			 <label>Gender</label>
@@ -39,13 +40,22 @@
               		</div>
               		 <div class="input-field">
                			 <label>College</label>
-               			 <input name="college" type="text" placeholder="college name" required="" />
+               			 <input name="college" type="text" placeholder="College name" required="" />
+                      <div class="sub-info">(Type only if not found in dropdown list)</div>
               		</div>
              		 <div class="input-field">
              			<label>Phone</label>
               			<input name="phone" type="text" placeholder="+91-" required="" min="1000000000" max="9999999999"/>
               		</div>
-
+                   <div class="input-field">
+                     <label>Are you the head of any cultural society?</label>
+                     <div class="gender-wrap">
+                      <input name="cultural" type="radio" value="Y" />
+                       <label>Yes</label>
+                        <input name="cultural" type="radio" value="N" />
+                        <label>No</label>
+                    </div>
+                 </div>
             		 <div class="input-field">
              		 	<label> Year of study</label>
              		 	<select>
@@ -59,7 +69,7 @@
              		 </div>
               		
              		 <div class="input-field">
-             		 	<label> Select events</label>
+             		 	<label> Select events to register</label>
              		 	<select>
              		 		<option value="Rapwars">Rapwars </option>
              		 		<option value="Rapwars">Rapwars </option>
